--- a/app/src/main/res/layout-land/fragment_play_music.xml
+++ b/app/src/main/res/layout-land/fragment_play_music.xml
@@ -25,7 +25,7 @@
     <ImageView
         android:id="@+id/image_view_album_play"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="200dp"
         android:layout_margin="@dimen/margin_image_view_play_layout"
         android:layout_marginStart="12dp"
         android:layout_marginLeft="12dp"
@@ -58,7 +58,7 @@
     <LinearLayout
         android:id="@+id/linearLayout_play_sheet"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
         android:gravity="center_horizontal|center_vertical"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -140,3 +140,49 @@
         app:layout_constraintVertical_bias="0.816" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+    <!--<ImageView-->
+    <!--    android:id="@+id/image_view_music"-->
+    <!--    android:layout_width="wrap_content"-->
+    <!--    android:layout_height="wrap_content"/>-->
+    <!--    <SeekBar-->
+
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_marginHorizontal="@dimen/margin_horizontal_seekbar"-->
+    <!--        android:layout_gravity="center_horizontal|bottom"/>-->
+    <!--    <LinearLayout-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:orientation="horizontal"-->
+    <!--        android:gravity="center_horizontal">-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/button_back"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:src="@android:drawable/ic_media_previous"-->
+    <!--            />-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/button_pause"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:src="@android:drawable/ic_media_pause"-->
+    <!--            />-->
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/button_play"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:src="@android:drawable/ic_media_play"-->
+    <!--            />-->
+
+
+    <!--        <ImageView-->
+    <!--            android:id="@+id/button_forward"-->
+    <!--            android:layout_width="wrap_content"-->
+    <!--            android:layout_height="wrap_content"-->
+    <!--            android:src="@android:drawable/ic_media_next" />-->
+    <!--    </LinearLayout>-->
+
+
